--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Gif's For Everyone</title>
 </head>
 <body>
-    
+    <h1>Search for Gifs</h1>
+    <input id="search">
+    <button id="gif-portal">Gif Portal</button>
+    <div id= "gifDiv"></div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+       <script type="text/javascript" src="assets/Javascript/app.js"></script>
 </body>
 </html>
