--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <h1>Search for Gifs</h1>
     <input id="search">
     <button id="gif-portal">Gif Portal</button>
-    <div id= "gifDiv"></div>
+    <div id= "gifDiv">
+
+    </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-       <script type="text/javascript" src="assets/Javascript/app.js"></script>
+       <script type="text/javascript" src="Assets/Javascript/app.js"></script>
 </body>
 </html>
