added and changed lots of things still a bit to go

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Search for Gifs</h1>
+    <div id="button"></div>
     <input id="search">
     <button id="gif-portal">Gif Portal</button>
     <div id= "gifDiv">
