fixed all of the problems in the javascript over the weekend but did not have wifi

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css">
     <title>Gif's For Everyone</title>
 </head>
 <body>
     <h1>Search for Gifs</h1>
+    <h3>Click one of the preset buttons belw or make your own!</h3>
     <div id="button"></div>
     <input id="search">
     <button id="gif-portal">Gif Portal</button>
